--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>HVSTORE</title>
+        <title>Helios Vape Store</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top">HVSTORE</a>
+                <a class="navbar-brand" href="#page-top">Helios Vape Store</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -39,7 +39,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Welcome To HVSTORE!</div>
+                <div class="masthead-subheading">Welcome To Helios Vape Store!</div>
                 <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Belanja apa hari ini ?</a>
             </div>
@@ -203,7 +203,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>March 2016</h4>
-                                <h4 class="subheading">An HVSTORE is Born</h4>
+                                <h4 class="subheading">An Helios Vape Store is Born</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">Tiga sahabaat Rafael, Hasbi, dan Valen telah lama berbagi kegemaran yang sama dalam dunia vape. Dengan latar belakang dan keahlian yang beragam, kami memutuskan untuk menggabungkan kekuatan dan pengetahuan kami untuk mendirikan FAEL Vape Store. Kami ingin memberikan pengalaman berbelanja vape yang tak terlupakan, lengkap dengan produk berkualitas tinggi dan layanan pelanggan yang ramah.</p></div>
                         </div>
@@ -350,7 +350,7 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; HVSTORE 2024</div>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; Helios Vape Store 2024</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
