--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/to.jpg" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/muh.jpg" alt="..." />
                             <h4>Muhammad Hasbi Amru Ma’rufi</h4>
                             <p class="text-muted">Investor</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-twitter"></i></a>
@@ -272,7 +272,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/yoko.webp" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/bi.jpg" alt="..." />
                             <h4>Valen Achmad</h4>
                             <p class="text-muted">Investor</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
