--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="container">
                 <div class="masthead-subheading">Welcome To Helios Vape Store!</div>
                 <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Belanja apa hari ini ?</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="https://wa.me/6289668835610?text=Hai,%20dengan%20saya%20Customer%20Helios%20Vape%20Store">Belanja apa hari ini ?</a>
             </div>
         </header>
         <!-- Services-->
@@ -206,7 +206,7 @@
                                 <h4>2016-2024</h4>
                                 <h4 class="subheading">Our Humble Beginnings</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Di sudut kota Cilacap yang tenang dan penuh keramahan, berdirilah sebuah vape store yang berbeda dari yang lain. FAEL Vape Store, didirikan oleh tiga sekawan yang memiliki hasrat dan cinta yang mendalam terhadap dunia vaping. Berawal dari mimpi dan semangat yang sama, kami bersama-sama menciptakan sebuah tempat di mana para vapers dapat menemukan berbagai macam kebutuhan vaping mereka.</p></div>
+                            <div class="timeline-body"><p class="text-muted">Di sudut kota Cilacap yang tenang dan penuh keramahan, berdirilah sebuah vape store yang berbeda dari yang lain. Helios Vape Store, didirikan oleh tiga sekawan yang memiliki hasrat dan cinta yang mendalam terhadap dunia vaping. Berawal dari mimpi dan semangat yang sama, kami bersama-sama menciptakan sebuah tempat di mana para vapers dapat menemukan berbagai macam kebutuhan vaping mereka.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -216,7 +216,7 @@
                                 <h4>March 2016</h4>
                                 <h4 class="subheading">An Helios Vape Store is Born</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Tiga sahabaat Rafael, Hasbi, dan Valen telah lama berbagi kegemaran yang sama dalam dunia vape. Dengan latar belakang dan keahlian yang beragam, kami memutuskan untuk menggabungkan kekuatan dan pengetahuan kami untuk mendirikan FAEL Vape Store. Kami ingin memberikan pengalaman berbelanja vape yang tak terlupakan, lengkap dengan produk berkualitas tinggi dan layanan pelanggan yang ramah.</p></div>
+                            <div class="timeline-body"><p class="text-muted">Tiga sahabaat RaHelios, Hasbi, dan Valen telah lama berbagi kegemaran yang sama dalam dunia vape. Dengan latar belakang dan keahlian yang beragam, kami memutuskan untuk menggabungkan kekuatan dan pengetahuan kami untuk mendirikan Helios Vape Store. Kami ingin memberikan pengalaman berbelanja vape yang tak terlupakan, lengkap dengan produk berkualitas tinggi dan layanan pelanggan yang ramah.</p></div>
                         </div>
                     </li>
                     <li>
@@ -226,7 +226,7 @@
                                 <h4>December 2018</h4>
                                 <h4 class="subheading">Dunia Vape Berkembang pesat</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Di FAEL Vape Store, kami menyediakan berbagai macam produk vape mulai dari pod, mod, hingga liquid dengan berbagai rasa yang unik dan berkualitas. Kami bekerja sama dengan merek-merek ternama seperti AIRSCREAM, Uwell, iJoy, Cozi, Foom, Voopoo, dan iSWTCH untuk memastikan bahwa Anda mendapatkan produk terbaik di pasaran. Setiap produk yang kami tawarkan telah melalui proses seleksi yang ketat untuk memastikan kepuasan dan keamanan para pelanggan kami.</p></div>
+                            <div class="timeline-body"><p class="text-muted">Di Helios Vape Store, kami menyediakan berbagai macam produk vape mulai dari pod, mod, hingga liquid dengan berbagai rasa yang unik dan berkualitas. Kami bekerja sama dengan merek-merek ternama seperti AIRSCREAM, Uwell, iJoy, Cozi, Foom, Voopoo, dan iSWTCH untuk memastikan bahwa Anda mendapatkan produk terbaik di pasaran. Setiap produk yang kami tawarkan telah melalui proses seleksi yang ketat untuk memastikan kepuasan dan keamanan para pelanggan kami.</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -263,8 +263,8 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/fael.jpg" alt="..." />
-                            <h4>Rafael Herifka Refandra</h4>
+                            <img class="mx-auto rounded-circle" src="assets/img/team/Helios.jpg" alt="..." />
+                            <h4>RaHelios Herifka Refandra</h4>
                             <p class="text-muted">Leader Bussines</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Twitter Profile"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Facebook Profile"><i class="fab fa-facebook-f"></i></a>
