--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">MOD</h4>
-                        <p class="text-muted">Berbagi Mechanical Mod | Electrical Box Mod</p>
+                        <p class="text-muted">Berbagai Mechanical Mod | Electrical Box Mod</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
