--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/Helios.jpg" alt="..." />
-                            <h4>RaHelios Herifka Refandra</h4>
+                            <img class="mx-auto rounded-circle" src="assets/img/team/fael.jpg" alt="..." />
+                            <h4>Rafael Herifka Refandra</h4>
                             <p class="text-muted">Leader Bussines</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Twitter Profile"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Facebook Profile"><i class="fab fa-facebook-f"></i></a>
