--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                                 <h4>March 2016</h4>
                                 <h4 class="subheading">An Helios Vape Store is Born</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Tiga sahabaat RaHelios, Hasbi, dan Valen telah lama berbagi kegemaran yang sama dalam dunia vape. Dengan latar belakang dan keahlian yang beragam, kami memutuskan untuk menggabungkan kekuatan dan pengetahuan kami untuk mendirikan Helios Vape Store. Kami ingin memberikan pengalaman berbelanja vape yang tak terlupakan, lengkap dengan produk berkualitas tinggi dan layanan pelanggan yang ramah.</p></div>
+                            <div class="timeline-body"><p class="text-muted">Tiga sahabaat Rafael, Hasbi, dan Valen telah lama berbagi kegemaran yang sama dalam dunia vape. Dengan latar belakang dan keahlian yang beragam, kami memutuskan untuk menggabungkan kekuatan dan pengetahuan kami untuk mendirikan Helios Vape Store. Kami ingin memberikan pengalaman berbelanja vape yang tak terlupakan, lengkap dengan produk berkualitas tinggi dan layanan pelanggan yang ramah.</p></div>
                         </div>
                     </li>
                     <li>
